styles/styles.css
body {
    font-family: 'Afacad', sans-serif;
    margin: 0;
    padding: 0;
}

* {
    margin: 0;
    padding: 0;
}

header {
    display: flex;
    flex-direction: column;
    color: black;
}

.outer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 1px solid black;
    border-left: none;
    border-right: none;
    top: 0;
    left: 0;
    width: 100%;
    background-color: white;
    position: fixed;
    z-index: 1000;
}

.spacer {
    flex: 0 0 40px;
    width: 40px;
}

.logo {
    padding-left: 8px;
    display: flex;
    align-items: center;
    mix-blend-mode: multiply;
    img {
        cursor: pointer;
    }
}

header form {
    padding: 8px;
    flex-grow: 1;   
}

.search-cart {
    display: flex;
    align-items: right;
    flex-grow: 1;
}

input {
    font-family: inherit;
    font-size: 18px;
    width: 100%;
    padding: 6px;
    outline: none;
    border: 1px solid gray;
    box-sizing: border-box;
}

.input-search {
    font-family: inherit;
    font-size: 18px;
    width: 100%;
    padding: 6px;
    outline: none;
    border: 1px solid gray;
    background: url(../images/search-interface-symbol.png) no-repeat right 10px center;
    background-size: 20px;
    box-sizing: border-box;
}


@media (max-width: 768px) {
    .spacer {
        display: none;
    }
    .p-image1 {
        width: 250px;
    }
}

.p-image2 {
    padding-left: 8px;
    display: none;
}

.banner-spacer {
    display: none;
}

@media (min-width: 1245px) {
    .banner-spacer {
        display: flex;
        width: 20%;
    }
    .p-image2 {
        display: flex;
    }
}

.banner {
    display: flex;
    padding: 6px 6px 0px 6px;
    padding-top: 75px;
    background-color: orange;
    .product-info {
        display: flex;
        flex-direction: column;
        align-items: left;
        justify-content: center;
        padding-left: 4%;
        padding-right: 2%;
        .gonext {
            text-decoration: underline;
        }
    }
}



main {
    border-bottom: 1px solid black;
    h2 {
        border-bottom: 1px solid black;
        border-top: 1px solid black;
        padding: 6px;
        background-color: rgb(253, 117, 87);
    }
}
    
.category {
    min-height: 280px;
    h2 {
        padding-left: 5%;
    }
    div{
        display: flex;
        align-items: center; 
    }
}


.product-card {
width: 220px;
height: 280px;
overflow: scroll;
border: 1px solid #ddd;
border-radius: 10px;
overflow-x: hidden;
overflow-y: hidden;
margin: 0.3em;
box-shadow: 0 4px 8px rgb(0, 0, 0, 0.1);
text-align: center;
background-color: #fff;
transition: transform 0.2s, box-shadow 0.2s;
display: flex;
flex-direction: column;
align-items: center;
}

.product-card:hover {
transform: translate(-5px, -5px);
box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.product-card img {
width: 100%;
height: 200px;
object-fit: contain;
overflow: hidden;
padding: 10px;
}

.product-card h3 {
height: 60px;
font-size: 18px;    
margin-bottom: 10px 0;
color: black;
overflow-x: hidden;
overflow-y: auto;
}

.product-card p {
font-size: 16px;
color: orange;
margin-bottom: 10px;
}

.product-container {
display: flex;  
flex-wrap: wrap;
justify-content: flex-start;
padding: 10px;
}

.buy-button {
    background-color: rgb(255, 165, 0); 
    border: none;
    font-style: italic;
    text-decoration: underline;
    border-radius: 7px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    max-height: 3em;
    width: 100%; 
    cursor: pointer; 
    font-size: 2em; 
    transition: background-color 0.3s; 
}

.buy-button:hover {
    background-color: rgb(114, 76, 5); 
}
        /* köp-btn */
        /* kvitto */
.confirmation-main {
display: flex;
justify-content: center; 
align-items: center; 
min-height: calc(100vh - 100px); 
padding: 20px;
border-bottom: 1px solid black;
}
    
.confirmation-container {
    max-width: 600px; 
    width: 100%; 
    text-align: center;
    background-color: #e9f7fe; 
    padding: 20px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center; 
}
    
.confirmation-logo {
    max-width: 150px;
    margin: 0 auto 10px;
    display: block;
    mix-blend-mode: multiply;
}

.confirmation-title {
    color: orange;
    margin-bottom: 10px;
    font-size: 24px;
}

.notification {
    padding: 10px;
    margin: 10px 0;
    width: 100%; 
    text-align: center; 
}

.order-info {
    padding: 10px;
    margin: 10px 0;
    width: 100%; 
    text-align: center; 
}

.confirmation-info {
    padding: 6px;
    font-size: 20px;
    color: orange;
    background-color: transparent; 
    border: none !important; 
}
    
.product-display {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center; 
    margin: 10px 0;
    gap: 20px;
    width: 100%;
    height: 100%; 
}

.product-details {
    text-align: center;
}

.product-details h3 {
    font-size: 18px;
    margin-bottom: 5px;
}

.product-details p {
    font-size: 16px;
    color: #333;
}

.product-image {
    max-width: 40%;
    max-height: 25%;
    aspect-ratio: 1/1;
    object-fit: contain;
    mix-blend-mode: multiply;
}
    
.shipping-info {
    margin-top: 10px;
    text-align: left;
    display: inline-block;
    width: 100%; 
    text-align: center;
}

.shipping-info h3 {
    font-size: 18px;
}
        /* kvitto */

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding-top: 6px;
    background-color: orange;
    padding: 20px 20px
}

footer .footer-section {
    min-width: 200px; 
}

footer .footer-section ul {
    list-style-type: none; 
    padding: 0; 
}

footer .footer-section ul li {
    margin: 8px 0; 
}

footer .footer-section ul li a {
    color: black;
    text-decoration: none; 
    font-size: 16px;
}

.credits a {
    color: black; 
    text-decoration: none; 
    font-size: 14px;
}

form {
    display: block; /* Se till att alla fält hamnar på en rad */
    width: 100%; /* Sätt en maxbredd så att allt håller sig inom gränserna */
}

input.form-control {
    width: 100%; /* Se till att fälten tar upp hela bredden i formuläret */
    box-sizing: border-box; /* Förhindrar att padding gör att bredden ökar */
}

.form-label{
    width: 100px;
}
.form-group {
    display: flex;
    flex-direction: column;
}
.product-image-form{
    max-width: 200px;   /* Maximal bredd på 300px */
    max-height: 200px;  /* Maximal höjd på 300px */
}

